bugfix: overlapping of doc nav and footer

--- a/theme/default/src/doc.less
+++ b/theme/default/src/doc.less
@@ -8,7 +8,7 @@
     order: 1;
     min-height: calc(100vh - 100px);
   }
-  .menu .inner, .toc {
+  .toc {
     position: fixed;
   }
   @media (max-width: 768px) {
